# MLOPs-Prcatice

./: README.md  demo.py  main.py  projectflow.txt  pyproject.toml
notebook/: mongoDB_demo.ipynb
src/exception/: __init__.py
src/logger/: __init__.py
