[project]
name = "mlops-prcatice"
version = "0.1.0"
description = "Add your description here"
authors = [{name = "Hari Bhuva", email = "haribhuva05@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.11"
 
dependencies = [
    "boto3>=1.42.58",
    "botocore>=1.42.58",
    "certifi>=2026.2.25",
    "dill>=0.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.133.1",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mypy-boto3-s3>=1.42.37",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pymongo>=4.16.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.41.0",
]
